--- a/css/test.css
+++ b/css/test.css
@@ -5,11 +5,13 @@
 .header {
     display: flex;
     border-bottom: 1px solid #000;
-    padding-bottom: 10px;
+    padding: 10px 20px;
     font-size: 20px;
+    align-items: center;
 }
 .logo {
     margin-right: 50px;
+    padding: 5px 15px;
     text-decoration: none;
     color: lightgreen;
     background-color: rebeccapurple;
@@ -34,7 +36,12 @@ ul {
     margin: 0;
 }
 ul > li {
-    margin-right: 10px;
+    margin-right: 30px;
+}
+section{
+    background-color: lavender;
+    padding: 5px 20px;
+    margin-bottom: 20px;
 }
 a{
     color: rebeccapurple;
@@ -48,12 +55,14 @@ a{
     border-bottom: 1px solid #000;
 }
 .aside {
-    border-right: 1px solid #000;
-    padding-right: 20px;
+    background-color: lavender;
+    padding: 10px 20px;
 }
 .post {
     padding-bottom: 20px;
 }
 footer{
     font-size: 13px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
